[tool.poetry]
name = "roxham-twitter-analysis"
version = "0.1.0"
description = ""
authors = ["philippe.guay <guay.philippe@gmail.com>"]
readme = "README.md"
packages = [{include = "roxham_twitter_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
searchtweets = "^1.7.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
